[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Themes/general_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Themes/Styles/stylebox_box.tres" type="StyleBox" id=2]
[ext_resource path="res://UI/title_screen/title_screen.gd" type="Script" id=3]
[ext_resource path="res://UI/Icons/play.png" type="Texture" id=4]
[ext_resource path="res://UI/Icons/x.png" type="Texture" id=5]
[ext_resource path="res://UI/title_screen/teralite_title.png" type="Texture" id=6]
[ext_resource path="res://UI/Icons/gear.png" type="Texture" id=7]
[ext_resource path="res://UI/options/options.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Themes/Styles/stylebox_selected_box.tres" type="StyleBox" id=10]

[node name="title_screen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.445465
margin_right = -0.445465
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="VBoxContainer" parent="main"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_right = 96.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource( 1 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="main/center"]
margin_top = 38.0
margin_right = 192.0
margin_bottom = 95.0
size_flags_horizontal = 5
size_flags_vertical = 0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="HSeparator" type="HSeparator" parent="main/center"]
margin_top = 99.0
margin_right = 192.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="play" parent="main/center" instance=ExtResource( 9 )]
margin_top = 104.0
margin_right = 192.0
margin_bottom = 126.0
shortcut_in_tooltip = false
text = "Play"
icon = ExtResource( 4 )
flat = true

[node name="options" parent="main/center" instance=ExtResource( 9 )]
margin_top = 130.0
margin_right = 192.0
margin_bottom = 152.0
shortcut_in_tooltip = false
text = "Options"
icon = ExtResource( 7 )
flat = true

[node name="quit" parent="main/center" instance=ExtResource( 9 )]
margin_top = 156.0
margin_right = 192.0
margin_bottom = 178.0
shortcut_in_tooltip = false
text = "Quit"
icon = ExtResource( 5 )
flat = true

[node name="ver" type="Label" parent="main"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -116.0
margin_top = -17.0
margin_right = -2.0
grow_horizontal = 0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.345098, 0.878431, 0.933333, 1 )
text = "Beta X.X Hotfix #0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="main"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -17.0
margin_right = 60.0
margin_bottom = -2.0
theme = ExtResource( 1 )
text = "idk lol"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saves" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saves_list" type="ItemList" parent="saves"]
anchor_right = 1.0
margin_bottom = 152.0
custom_styles/cursor = ExtResource( 2 )
custom_styles/selected_focus = ExtResource( 10 )
custom_styles/bg_focus = ExtResource( 2 )
custom_styles/cursor_unfocused = ExtResource( 2 )
custom_styles/selected = ExtResource( 10 )
custom_styles/bg = ExtResource( 2 )
custom_colors/font_color_selected = Color( 0.823529, 0.654902, 0.0823529, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="saves"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 26.0
margin_right = 94.0
text = "New Save"
flat = true

[node name="VSeparator" type="VSeparator" parent="saves/HBoxContainer"]
margin_left = 98.0
margin_right = 99.0
margin_bottom = 20.0

[node name="load" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 103.0
margin_right = 176.0
text = "Load Save"
flat = true

[node name="VSeparator2" type="VSeparator" parent="saves/HBoxContainer"]
margin_left = 180.0
margin_right = 181.0
margin_bottom = 20.0

[node name="delete" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 185.0
margin_right = 268.0
text = "Delete Save"
flat = true

[node name="VSeparator3" type="VSeparator" parent="saves/HBoxContainer"]
margin_left = 272.0
margin_right = 273.0
margin_bottom = 20.0

[node name="back" parent="saves/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 277.0
margin_right = 317.0
text = "Back"
flat = true

[node name="new_save" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="new_save"]
anchor_right = 1.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="new_save/VBoxContainer"]
margin_right = 344.0
margin_bottom = 24.0

[node name="name_label" type="Label" parent="new_save/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Save Name:"

[node name="name" type="LineEdit" parent="new_save/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 344.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/minimum_spaces = 0
max_length = 40
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "untitled save"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficulty" type="OptionButton" parent="new_save/VBoxContainer"]
margin_top = 28.0
margin_right = 344.0
margin_bottom = 48.0
custom_constants/arrow_margin = 270
text = "Difficulty"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" parent="new_save" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -20.0
margin_right = 57.5
margin_bottom = 0.0
text = "Create New Save"
flat = true

[node name="cancel" parent="new_save" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -20.0
margin_right = 0.0
margin_bottom = 0.0
text = "Cancel"
flat = true

[node name="Options" parent="." instance=ExtResource( 8 )]

[node name="tabs" parent="Options" index="0"]
theme = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="main/center/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main/center/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main/center/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="saves/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="new_save/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="new_save/cancel" to="." method="_on_cancel_pressed"]
[connection signal="visibility_changed" from="Options" to="." method="_on_Options_visibility_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Options"]
